refactor: use Arrays.asList instead List.of